[package]
name = "pidfd"
version = "0.2.3"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
repository = "https://github.com/pop-os/pidfd"
description = """
Obtain file descriptors which refer to processes
"""
keywords = ["linux", "pidfd"]
categories = ["asynchronous", "os::unix-apis"]

[features]
waitid = []

[dependencies]
libc = "0.2"
fd-reactor = "0.1"

[dev-dependencies]
futures = "0.3"
